[package]
name = "simplebgc-api"
version = "0.1.0"
authors = ["Eli W. Hunter <elihunter173@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.3.4"
crc = "1.0.0"
duplicate = "0.2.5"
impl-trait-for-tuples = "0.1.3"
bitflags = "1.2.1"

simplebgc_api_macros = { version = "=0.1.0", path = "./simplebgc_api_macros" }
